# Advanced-RAG-System

./: README.md  app.py  pyproject.toml
faiss_store/: faiss.index  metadata.pkl
notebook/: doc.ipynb  pdf_loader.ipynb
src/: search.py
